--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Prasanth Pulidindi</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Font Awesome CDN for social icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-papmQK1p1Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q6Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"  crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <header>
@@ -64,11 +64,20 @@
       </div>
     </section>
     <section id="projects" class="section">
-      <h1>Projects</h1>
+      <h1 class="projects-title">Latest <span class="projects-highlight">Project</span></h1>
       <div class="projects-grid">
-        <div class="project-card">Project 1</div>
-        <div class="project-card">Project 2</div>
-        <div class="project-card">Project 3</div>
+        <a class="project-card" href="https://your-project1-link.com" target="_blank" rel="noopener" aria-label="Project 1">
+          <img src="assets/Domate.png" alt="Project 1" class="project-img" />
+          <p>Domate Services</p>
+        </a>
+        <a class="project-card" href="https://your-project2-link.com" target="_blank" rel="noopener" aria-label="Project 2">
+          <img src="assets/FormAgent.png" alt="Project 2" class="project-img" />
+          <p>AI Form Agent</p>
+        </a>
+        <a class="project-card" href="https://your-project3-link.com" target="_blank" rel="noopener" aria-label="Project 3">
+          <img src="assets/MissionFit.png" alt="Project 3" class="project-img" />
+          <p>MissionFit AI</p>
+        </a>
       </div>
     </section>
     <section id="education" class="section education-section">
@@ -82,7 +91,7 @@
               <div class="journey-content">
                 <span class="journey-date">2022 - 2026</span>
                 <h4 class="journey-degree">Vishnu Institute Of Technology</h4>
-                <p>Final-year Student with 8.58 CGPA</p>
+    <p>Final-year Computer Science student with a CGPA of 8.58. Actively involved in tech projects, hackathons, and AI-based innovations.</p>
               </div>
             </div>
             <div class="journey-item">
@@ -90,7 +99,7 @@
               <div class="journey-content">
                 <span class="journey-date">2020 - 2022</span>
                 <h4 class="journey-degree">Narayana Junior College</h4>
-                <p>Passed out with 86.3%</p>
+    <p>Completed Intermediate with 86.3%, focusing on MPC stream. Built a strong foundation in Mathematics and Physics, sparking an interest in technology.</p>
               </div>
             </div>
             <div class="journey-item">
@@ -98,7 +107,8 @@
               <div class="journey-content">
                 <span class="journey-date">2019 - 2020</span>
                 <h4 class="journey-degree">Aditya EM-School</h4>
-                <p>Passed out with 97.8%</p>
+        <p>Passed out with 97.8%, excelling in academics and co-curricular activities. Recognized for consistency and discipline throughout school years.</p>
+
               </div>
             </div>
           </div>
@@ -109,25 +119,25 @@
             <div class="journey-item">
               <div class="journey-dot"></div>
               <div class="journey-content">
-                <span class="journey-date">2017 - 2019</span>
-                <h4 class="journey-degree">Web Developer - Company</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi aliquam soluta vero iure. Expedita quo aut delectus modi totam possimus.</p>
+                <span class="journey-date">2024 - Present</span>
+                <h4 class="journey-degree">Full-Stack Developer – DoMate (Personal)</h4>
+                <p>Built a voice-controlled service jobs platform that Allows users to navigate, login, search services and real-time messaging  entirely by voice with integrated AI. </p>
               </div>
             </div>
             <div class="journey-item">
               <div class="journey-dot"></div>
               <div class="journey-content">
-                <span class="journey-date">2018 - 2019</span>
-                <h4 class="journey-degree">Web Developer - Company</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi aliquam soluta vero iure. Expedita quo aut delectus modi totam possimus.</p>
+                <span class="journey-date">2023-2024</span>
+                <h4 class="journey-degree">Technical Lead - Ecell</h4>
+                <p>Led the development of E-Cell’s official website and automated event certificate mailing, managed student data and internal tech operations</p>
               </div>
             </div>
             <div class="journey-item">
               <div class="journey-dot"></div>
               <div class="journey-content">
-                <span class="journey-date">2019 - 2020</span>
-                <h4 class="journey-degree">Web Developer - Company</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi aliquam soluta vero iure. Expedita quo aut delectus modi totam possimus.</p>
+                <span class="journey-date">2022-2023</span>
+                <h4 class="journey-degree">Freelance Developer</h4>
+                <p>Delivered responsive admin dashboards, implemented secure login/signup. email/certificate autmotaions for college events.</p>
               </div>
             </div>
           </div>
@@ -138,41 +148,41 @@
       <h2 class="skills-title">My <span class="skills-highlight">Skills</span></h2>
       <div class="skills-container">
         <div class="skills-column">
-          <h3 class="skills-subtitle">Coding Skills</h3>
+          <h3 class="skills-subtitle">Languages</h3>
           <div class="skill-bar">
-            <div class="skill-info"><span>HTML</span><span>90%</span></div>
+            <div class="skill-info"><span>Java</span><span>90%</span></div>
             <div class="bar-bg"><div class="bar-fill" style="width:90%"></div></div>
           </div>
           <div class="skill-bar">
-            <div class="skill-info"><span>CSS</span><span>80%</span></div>
+            <div class="skill-info"><span>Python</span><span>80%</span></div>
             <div class="bar-bg"><div class="bar-fill" style="width:80%"></div></div>
           </div>
           <div class="skill-bar">
-            <div class="skill-info"><span>JavaScript</span><span>65%</span></div>
-            <div class="bar-bg"><div class="bar-fill" style="width:65%"></div></div>
+            <div class="skill-info"><span>SQL</span><span>70%</span></div>
+            <div class="bar-bg"><div class="bar-fill" style="width:70%"></div></div>
           </div>
           <div class="skill-bar">
-            <div class="skill-info"><span>Python</span><span>78%</span></div>
-            <div class="bar-bg"><div class="bar-fill" style="width:78%"></div></div>
+            <div class="skill-info"><span>JavaScript</span><span>75%</span></div>
+            <div class="bar-bg"><div class="bar-fill" style="width:75%"></div></div>
           </div>
         </div>
         <div class="skills-column">
-          <h3 class="skills-subtitle">Professional Skills</h3>
+          <h3 class="skills-subtitle">Technologies</h3>
           <div class="skill-bar">
-            <div class="skill-info"><span>Web Design</span><span>95%</span></div>
+            <div class="skill-info"><span>Full-Stack Devolopment [MERN-stack]</span><span>95%</span></div>
             <div class="bar-bg"><div class="bar-fill" style="width:95%"></div></div>
           </div>
           <div class="skill-bar">
-            <div class="skill-info"><span>Web Development</span><span>67%</span></div>
-            <div class="bar-bg"><div class="bar-fill" style="width:67%"></div></div>
+            <div class="skill-info"><span>Andriod Development [Flutter]</span><span>75%</span></div>
+            <div class="bar-bg"><div class="bar-fill" style="width:75%"></div></div>
           </div>
           <div class="skill-bar">
-            <div class="skill-info"><span>Graphic Design</span><span>85%</span></div>
-            <div class="bar-bg"><div class="bar-fill" style="width:85%"></div></div>
-          </div>
-          <div class="skill-bar">
-            <div class="skill-info"><span>SEO Marketing</span><span>60%</span></div>
+            <div class="skill-info"><span>Web Development [Next.js/Typescript]</span><span>60%</span></div>
             <div class="bar-bg"><div class="bar-fill" style="width:60%"></div></div>
+          </div>
+          <div class="skill-bar">
+            <div class="skill-info"><span>[HTML/CSS/Javascript]</span><span>85%</span></div>
+            <div class="bar-bg"><div class="bar-fill" style="width:85%"></div></div>
           </div>
         </div>
       </div>
